[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ResultsMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/preset/GamePreset.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/Digitalis.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/preset/Terminal.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/preset/ResultsMenuButtonPreset.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/textures/bigframe.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="ResultsMenu" type="Popup"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -187.0
margin_right = 475.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 1 )
_sections_unfolded = [ "Popup", "Rect" ]

[node name="BackPanel" type="Panel" parent="." index="0"]

self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -445.0
margin_top = -182.5
margin_right = 455.0
margin_bottom = 186.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
_sections_unfolded = [ "Rect", "Size Flags", "Visibility" ]

[node name="TitleLabel" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_right = 460.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "RESULTS"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[node name="Container" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 90.0
margin_right = 885.0
margin_bottom = 367.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
_sections_unfolded = [ "Rect" ]

[node name="Highscores" type="HBoxContainer" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 815.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 2
_sections_unfolded = [ "Rect" ]

[node name="LevelScores" type="VBoxContainer" parent="Container/Highscores" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 450.0
margin_bottom = 270.0
rect_min_size = Vector2( 450, 270 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="LevelLabel" type="RichTextLabel" parent="Container/Highscores/LevelScores" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 190.0
margin_bottom = 40.0
rect_min_size = Vector2( 190, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "LEVEL"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="HighscoreLabel" type="RichTextLabel" parent="Container/Highscores/LevelScores" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 430.0
margin_bottom = 95.0
rect_min_size = Vector2( 430, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Your highscore:"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CurrentScoreLabel" type="RichTextLabel" parent="Container/Highscores/LevelScores" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 125.0
margin_right = 430.0
margin_bottom = 150.0
rect_min_size = Vector2( 430, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Current score:"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="RoundScores" type="VBoxContainer" parent="Container/Highscores" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 454.0
margin_right = 904.0
margin_bottom = 270.0
rect_min_size = Vector2( 450, 270 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "Anchor", "Rect", "Size Flags", "custom_constants" ]

[node name="RoundLabel" type="RichTextLabel" parent="Container/Highscores/RoundScores" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "ROUND"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="HighscoreLabel" type="RichTextLabel" parent="Container/Highscores/RoundScores" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 430.0
margin_bottom = 95.0
rect_min_size = Vector2( 430, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Your highscore:"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="CurrentScoreLabel" type="RichTextLabel" parent="Container/Highscores/RoundScores" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 125.0
margin_right = 430.0
margin_bottom = 150.0
rect_min_size = Vector2( 430, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Current score:"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CancelText" type="RichTextLabel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 265.0
margin_top = 307.0
margin_right = 425.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "CANCEL"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Focus", "Hint", "Rect", "Visibility", "custom_fonts" ]

[node name="CancelButton" type="TextureButton" parent="CancelText" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -10.0
margin_right = 180.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 1
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="SendText" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 475.0
margin_top = 307.0
margin_right = 585.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "SEND"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="SendButton" type="TextureButton" parent="SendText" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -10.0
margin_right = 140.0
margin_bottom = 60.0
rect_min_size = Vector2( 170, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 1
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Frame" type="NinePatchRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 905.0
margin_bottom = 373.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )

[connection signal="about_to_show" from="." to="." method="_on_ResultsMenu_about_to_show"]

[connection signal="pressed" from="CancelText/CancelButton" to="." method="_on_CancelButton_pressed"]

[connection signal="pressed" from="SendText/SendButton" to="." method="_on_SendButton_pressed"]


